# archaludon

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md  architecture-model.md  chip-specs.md  cost-model.md  examples.md  getting-started.md  glossary.md  simulator.md  streaming-plan.md
examples/: npu.dot  run_add.py  run_frontend.py  run_issue_depth.py  run_matmul.py  run_parallel_add.py  run_parallel_add_2core.py  run_softmax.py  run_stream_fusion.py  run_vector_stall.py  visualize_npu.py
examples/kernels/: matmul.mlir
specs/: npu-2core.yaml  npu-stream.yaml  npu.yaml
src/arch_sim/arch/: __init__.py  base.py  builder.py  compute.py  control.py  dma.py  loader.py  pipe.py  storage.py  validator.py  visualize.py
src/arch_sim/cost/: __init__.py  cost.py
src/arch_sim/frontend/: __init__.py  linalg_lowering.py  mlir_parser.py
src/arch_sim/ir/: __init__.py  graph.py  ops.py
src/arch_sim/scheduler/: scheduler.py
src/arch_sim/sim/: __init__.py  backpressure.py  channel.py  engine.py  instruction.py  queue.py  report.py
tests/arch/: test_base.py  test_builder.py  test_compute.py  test_dma.py  test_loader.py  test_pipe.py  test_storage.py  test_streaming_paths.py  test_validator.py  test_visualize.py
tests/arch/fixtures/: ascend_2core.yaml  ascend_like.yaml
tests/cost/: test_cost_primitives.py
tests/frontend/: test_mlir_parser.py  test_streaming_fusion.py
tests/frontend/fixtures/: add.mlir
tests/sim/: test_backpressure.py  test_engine.py  test_examples.py  test_streaming.py
