[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arch_sim"
version = "0.1.0"
description = "Archaludon architecture simulator"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
